--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,14 +25,13 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <a class="sidebar-nav-item" href="{{ site.course.url }}">Course page</a>
+    <span class="sidebar-nav-item">Currently {{ site.version }}</span>
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. Licensed under <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0</a>.
     </p>
   </div>
 </div>
