--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,10 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.course.url }}">Course page</a>
+    <a class="sidebar-nav-item" href="{{ site.course.url }}">Course
+      page</a>
+    <a class="sidebar-nav-item"
+       href="{{site.resources.url}}">{{site.resources.shortname}}</a>    
     <span class="sidebar-nav-item">Currently {{ site.version }}</span>
   </nav>
 
