--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  {% feed_meta %}
 
   <!-- MathJax with kramdown: http://jekyllrb.com/docs/extras/ -->
   <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
