adjusted AnchorJS to only decorate h2 - h6
Note: all posts should start with h2, h1 is the auto-generated title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
      // https://www.bryanbraun.com/anchorjs/#basic-usage
      // Add anchors on DOMContentLoaded
      document.addEventListener("DOMContentLoaded", function(event) {
-     anchors.add();
+     anchors.add('h2, h3, h4, h5, h6');
      });
   </script>
   
