load mathjax via https

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,5 +39,5 @@
   </script>
   
   <!-- MathJax with kramdown: http://jekyllrb.com/docs/extras/ -->
-  <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 </head>
