add link to Wiki to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,9 @@
     <a class="sidebar-nav-item" href="{{ site.course.url }}">Course
       page</a>
     <a class="sidebar-nav-item"
-       href="{{site.org.url}}">{{site.org.shortname}}</a>    
+       href="{{site.org.url}}">{{site.org.shortname}}</a>
+    <a class="sidebar-nav-item"
+       href="{{site.wiki.url}}">{{site.wiki.shortname}}</a>        
     <a class="sidebar-nav-item"
        href="{{site.resources.url}}">{{site.resources.shortname}}</a>    
     <span class="sidebar-nav-item">Currently {{ site.version }}</span>
